--- a/201023_homework.html
+++ b/201023_homework.html
@@ -5,16 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>이든의 숙제</title>
+    <style>
+        body {
+            background: #1C4E42;
+        }
+        h1 {
+            font-weight: bold;
+            font-size: 96px;
+            text-align: center;
+            color: #FFFFFF;
+        }
+        h2 {
+            font-weight: bold;
+            font-size: 32px;
+            text-align: center;
+            color: #1C201E;
+        }
+        .caption {
+            margin-top: 16px;
+            font-weight: normal;
+            font-size: 16px;
+            text-align: center;
+            color: rgba(0, 0, 0, 0.7);
+        }
+        .contents {
+            margin: auto;
+            padding: 60px 24px;
+            width: 80%;
+            height: auto;
+            background: #FFFFFF;
+            border-radius: 16px;
+        }
+        input {
+            padding: 16px 20px;
+            width: 50%;
+            height: 60px;
+            background: rgba(0, 0, 0, 0.05);
+            border: 2px solid rgba(0, 0, 0, 0.2);
+            box-sizing: border-box;
+            border-radius: 8px;
+        }
+        button {
+            padding: 16px 36px;
+            margin-left: 6px;
+            width: auto;
+            height: 60px;
+            background: #13775F;
+            border-radius: 8px;
+            font-weight: bold;
+            font-size: 24px;
+            color: #FFFFFF;
+        }
+        #input-area {
+            display: flex;
+            justify-content: center;
+        }
+        #showResult {
+            margin: auto;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-    <div id="contents">
-        <h1>어서오세요. 구구단입니다.</h1>
-        <p>알고 싶은 구구단의 숫자 혹은 'n단'를 입력하세요.</p>
-        <p>2단에서 9단까지만 알려드릴 수 있어요.</p>
-
-        <input type="text" id="inputNumber"/>
-        <button onclick="showMultable()">계산하기</button>
-
+    <h1>Googoo Check</h1>
+    <div class="contents">
+        <div id=title>
+            <h2>몇 단을 알고 싶으신가요?</h2>
+            <p class="caption">2단에서 9단까지만 알려드릴 수 있어요.</p>
+        </div>
+        <div id="input-area">
+            <input type="text" placeholder="ex) 2 or 2단" id="inputNumber"/>
+            <button onclick="showMultable()">계산하기</button>
+        </div>
+        
+    </div>
+    <div class="contents">
+        <h2>Result</h2>
         <div id="showResult"></div>
     </div>
     
